Bug 86547 - Help and OK buttons overlap in the hyperlink dialogue box
Summary: Help and OK buttons overlap in the hyperlink dialogue box
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0
Keywords:
: 88955 (view as bug list)
Depends on:
Blocks: Hyperlink-Dialog
  Show dependency treegraph
 
Reported: 2014-11-22 00:00 UTC by A (Andy)
Modified: 2017-10-06 08:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot1 (26.07 KB, image/png)
2015-03-30 19:54 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description A (Andy) 2014-11-22 00:00:54 UTC
The Hyperlink dialogue box is squeezed, which is not reproducible with LO 4.3.4.1.

Steps to Reproduce:
1. Open WRITER in LO 4.4.0.0.beta1
2. Go to the Hyperlink icon in the toolbar at the top or via INSERT -> HYPERLINK

Result:
The Hyperlink dialogue box is squeezed (e.g. the HELP and OK buttons lie on top of each other).

Reproduced with LO 4.4.0.0.beta1.
Comment 1 Adolfo Jayme Barrientos 2014-11-22 10:57:54 UTC
Can you add a screenshot?
Comment 2 A (Andy) 2014-11-22 19:10:50 UTC
I tried to make a screenshot.  Unfortunately, I could no more reproduce it.  I don't why.  Maybe, it has something to do with rescaling I had done in the meantime, but I don't know.  I mark it as WorksForMme until I can reproduce it again.
Comment 3 Gordo 2015-03-30 19:54:40 UTC
Created attachment 114476 [details]
screenshot1

I had this happen after creating a new profile.  It does not remember after I resize it.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Comment 4 Buovjaga 2015-04-08 16:25:09 UTC
Set to NEW per comment 3.

The shrinking was reported in bug 85901.

I don't get the button overlap because my Win 7 doesn't use any theming!
Comment 5 tommy27 2016-04-16 07:23:50 UTC Comment hidden (obsolete)
Comment 6 Adolfo Jayme Barrientos 2016-06-03 05:31:39 UTC
*** Bug 88955 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2017-10-05 07:59:29 UTC
No longer reproducible in

Versión: 5.4.1.2
Id. de compilación: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527
Subproc. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group

as the dialog has a min width!
Comment 8 Xisco Faulí 2017-10-05 08:12:53 UTC
No, it's still reproducible...

Version: 6.0.0.0.alpha0+
Build ID: 96e67461c8b451f3a313bcc973ac49c5e49537c0
CPU threads: 1; OS: Windows 6.1; UI render: default; 
Locale: es-ES (es_ES); Calc: group
Comment 9 Xisco Faulí 2017-10-05 08:17:24 UTC
@Caolan, one for you ?
Comment 10 Commit Notification 2017-10-05 14:40:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97fdf8a04b50b2f7763eba7b16096868a358d313

Resolves: tdf#86547 width of button box is taken before spacing added

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2017-10-06 08:29:29 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: ca95e886b42157d1d6394ed0b4c910978f5c2fda
CPU threads: 1; OS: Windows 6.1; UI render: default; 
Locale: es-ES (es_ES); Calc: group