Resolves: tdf#86547 width of button box is taken before spacing added

Change-Id: I2497dfcea98682db7e507704227052c13a18d9dd